--- a/bower.json
+++ b/bower.json
@@ -11,10 +11,7 @@
     "angular-route": "~1.5.3",
     "bootstrap-sass": "~3.3.5",
     "angular-bootstrap": "~0.14.3",
-    "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
-    "moment": "~2.10.6",
-    "animate.css": "~3.4.0",
     "angular": "~1.5.3",
     "bootstrap-material-design": "^0.5.9"
   },
@@ -30,6 +27,12 @@
         "assets/fonts/bootstrap/glyphicons-halflings-regular.ttf",
         "assets/fonts/bootstrap/glyphicons-halflings-regular.woff",
         "assets/fonts/bootstrap/glyphicons-halflings-regular.woff2"
+      ]
+    },
+    "bootstrap-material-design": {
+      "main": [
+        "sass/bootstrap-material-design.scss",
+        "sass/ripples.scss"
       ]
     }
   },
