--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "dashboard",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
+    "jQuery": "^2.2.4",
     "angular-animate": "~1.5.3",
     "angular-cookies": "~1.5.3",
     "angular-touch": "~1.5.3",
@@ -13,7 +14,8 @@
     "angular-bootstrap": "~0.14.3",
     "angular-toastr": "~1.5.0",
     "angular": "~1.5.3",
-    "bootstrap-material-design": "^0.5.9"
+    "bootstrap-material-design": "^0.5.9",
+    "arrive": "^2.3.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
@@ -32,7 +34,9 @@
     "bootstrap-material-design": {
       "main": [
         "sass/bootstrap-material-design.scss",
-        "sass/ripples.scss"
+        "sass/ripples.scss",
+        "scripts/material.js",
+        "scripts/ripples.js"
       ]
     }
   },
