--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-toastr": "~1.5.0",
     "angular": "~1.5.3",
     "bootstrap-material-design": "^0.5.9",
-    "arrive": "^2.3.1"
+    "arrive": "^2.3.1",
+    "font-awesome": "fontawesome#^4.6.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
