--- a/bower.json
+++ b/bower.json
@@ -12,11 +12,11 @@
     "angular-route": "~1.5.3",
     "bootstrap-sass": "~3.3.5",
     "angular-bootstrap": "~0.14.3",
-    "angular-toastr": "~1.5.0",
     "angular": "~1.5.3",
     "bootstrap-material-design": "^0.5.9",
     "arrive": "^2.3.1",
-    "font-awesome": "fontawesome#^4.6.3"
+    "font-awesome": "fontawesome#^4.6.3",
+    "angularfire": "^1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
