--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "bootstrap-material-design": "^0.5.9",
     "arrive": "^2.3.1",
     "font-awesome": "fontawesome#^4.6.3",
-    "angularfire": "^1.2.0"
+    "angularfire": "^1.2.0",
+    "AngularJS-Toaster": "angularjs-toaster#^2.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
