--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "arrive": "^2.3.1",
     "font-awesome": "fontawesome#^4.6.3",
     "angularfire": "^1.2.0",
-    "AngularJS-Toaster": "angularjs-toaster#^2.0.0"
+    "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
+    "angular-dimple": "^2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
@@ -43,6 +44,7 @@
     }
   },
   "resolutions": {
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "d3": ">=3.5.2"
   }
 }
