--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "font-awesome": "fontawesome#^4.6.3",
     "angularfire": "^1.2.0",
     "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
-    "angular-dimple": "^2.0.1"
+    "angular-chart.js": "^0.10.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
@@ -44,7 +44,6 @@
     }
   },
   "resolutions": {
-    "angular": "~1.5.3",
-    "d3": ">=3.5.2"
+    "angular": "~1.5.3"
   }
 }
