--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "font-awesome": "fontawesome#^4.6.3",
     "angularfire": "^1.2.0",
     "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
-    "angular-chart.js": "^0.10.2"
+    "angular-chart.js": "^0.10.2",
+    "angular-google-places-autocomplete": "^0.2.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
@@ -40,6 +41,12 @@
         "sass/ripples.scss",
         "scripts/material.js",
         "scripts/ripples.js"
+      ]
+    },
+    "angular-google-places-autocomplete": {
+      "main": [
+        "src/autocomplete.js",
+        "src/autocomplete.css"
       ]
     }
   },
