--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angularfire": "^1.2.0",
     "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
     "angular-chart.js": "^0.10.2",
-    "angular-google-places-autocomplete": "^0.2.7"
+    "angular-google-places-autocomplete": "^0.2.7",
+    "angular-google-maps": "^2.3.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
