--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "AngularJS-Toaster": "angularjs-toaster#^2.0.0",
     "angular-chart.js": "^0.10.2",
     "angular-google-places-autocomplete": "^0.2.7",
-    "angular-google-maps": "^2.3.3"
+    "angular-google-maps": "^2.3.3",
+    "ng-csv": "^0.3.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
