chore: update bulid task to include font-awesome files

--- a/bower.json
+++ b/bower.json
@@ -45,6 +45,16 @@
         "scripts/ripples.js"
       ]
     },
+    "font-awesome": {
+      "main": [
+        "scss/font-awesome.scss",
+        "fonts/fontawesome-webfont.eot",
+        "fonts/fontawesome-webfont.svg",
+        "fonts/fontawesome-webfont.ttf",
+        "fonts/fontawesome-webfont.woff",
+        "fonts/fontawesome-webfont.woff2"
+      ]
+    },
     "angular-google-places-autocomplete": {
       "main": [
         "src/autocomplete.js",
